--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To Do List</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
         <link href="https://fonts.googleapis.com/css?family=Bellota&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/style.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body> 
 
@@ -23,10 +26,9 @@
                 </ul>
             </div>
             <div class="add-to-do">
-                <i class="fa fa-plus-circle"></i>
                 <input type="text" id="input" placeholder="Add a to-do">
             </div>
         </div>
-        <script src="main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
