--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
                 <input type="text" id="input" placeholder="Add a to-do">
             </div>
         </div>
-        <script src="js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
